Updated View and functionality of Menu page

--- a/index1.html
+++ b/index1.html
@@ -151,10 +151,37 @@
                    <li class="lateNight"><a href="#">Menu Items</a>                     
 				   </li>
             </ul>
+			<div style="background-color: white" align="center"	><div class="HPHeader2">
+                                    <table style="padding: 2px">
+                                        <tbody><tr>
+                                            <td>
+                                                Sort By :
+                                            </td>
+                                            <td>
+                                                <ul class="sort">
+                                                    <li>
+                                                        <a id="veg" href="#"><img src="./custom/images/Veg.png" alt="Veg" title="Veg">
+                                                            Veg&nbsp;
+                                                        </a></li>
+                                                    <li>
+                                                        <a id="nonveg" href="#"><img src="./custom/images/NonVeg.png" alt="Non Veg" title="Non Veg">&nbsp;Non-Veg
+                                                        </a></li>
+                                                    <li>
+                                                        <a id="unitPrice" class="asc" href="#">Price</a><img class="unitPriceImg" src="./custom/images/no_sort.png" />
+                                                    </li>
+													 <li>
+                                                        <a id="popularity" class="asc" href="#">Popularity</a><img class="popularityImg" src="./custom/images/no_sort.png" />
+                                                    </li>
+                                                </ul>
+                                            </td>
+                                        </tr>
+                                    </tbody></table>
+                                </div></div>
             <div class="items scroll">
+			
           </div>
               </div>              
-          <div class="col-md-3 cart hidden-xs hidden-sm "> 
+          <div class="col-md-3 cart hidden-xs hidden-sm"> 
               <div class="cartHeading"><span class="glyphicon glyphicon-shopping-cart"></span>  Your Cart <span class="badge cartItemCount"></span></div>
               <!--<div class="estimatedTime">Estimated Delivery time: 50 min</div>-->
               <div class="cartItems">
@@ -175,11 +202,11 @@
 		  </div>
         </div>
           </div>
-      <nav class="navbar navbar-inverse navbar-fixed-bottom hidden-xs">
+      <!--<nav class="navbar navbar-inverse navbar-fixed-bottom hidden-xs">
         <div class="container">
     
         </div>
-      </nav>
+      </nav>-->
  </div>
  <div class="modal fade">
   <div class="modal-dialog">
@@ -201,7 +228,7 @@
 <div class="row cartListTemplate hidden">
 	<div class="row cartList">
 				<span class="col-md-6 product_name_cart"></span>
-				<span class="col-md-6">
+				<span class="col-md-6 product_actions_cart">
 					<span class="glyphicon glyphicon-minus cartMinus" title="Click to decrease"></span> 
 					<span class="quantity" data-product-code="" data-product-name=""></span> 
 					<span class="glyphicon glyphicon-plus cartPlus" title="Click to increase"></span>
@@ -219,13 +246,13 @@
 	<script src="vendor/js/bootstrap-dialog.min.js"></script>
 	<script src="vendor/js/jquery.sidr.min.js"></script>
 	 
-<div id="sidr" class="hidden-sm hidden-md hidden-lg">
+<!--<div id="sidr" class="hidden-sm hidden-md hidden-lg">
   <div class="list-group categoriesListMenuOverlay">
       <span class="list-group-item heading">                
           <span class="glyphicon glyphicon-th-list" title="Click to decrease"></span> Categories
       </span>
   </div>
-</div>
+</div>-->
  
 <script>
 </script>
