--- a/index1.html
+++ b/index1.html
@@ -32,7 +32,7 @@
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
                <img src="custom/images/profile.png" class="navToggle img-responsive img-circle">
             </button>
-            <a class="navbar-brand" href="#"><img class="logo" alt="Brand" src="custom/images/logo.png"></a>
+            <a class="navbar-brand" href="index.html"><img class="logo" alt="Brand" src="custom/images/logo.png"></a>
           </div>
 		  <div class="col-md-6 text-center navbar-left">
   
