updated colors in layout

--- a/index1.html
+++ b/index1.html
@@ -152,12 +152,12 @@
 				   </li>
             </ul>
 			<div style="background-color: white" align="center"	><div class="HPHeader2">
-                                    <table style="padding: 2px">
+                                    <table>
                                         <tbody><tr>
-                                            <td>
+                                            <td class="sort_first">
                                                 Sort By :
                                             </td>
-                                            <td>
+                                            <td class="sort_second">
                                                 <ul class="sort">
                                                     <li>
                                                         <a id="veg" href="#"><img src="./custom/images/Veg.png" alt="Veg" title="Veg">
