worked in responsive layout for search and sort buttons

--- a/index1.html
+++ b/index1.html
@@ -34,9 +34,10 @@
             </button>
             <a class="navbar-brand" href="index.html"><img class="logo" alt="Brand" src="custom/images/logo.png"></a>
           </div>
+            <span class="glyphicon glyphicon-search searchInMobile hiddenInTab hidden-md hidden-lg"></span>
 		  <div class="col-md-6 text-center navbar-left">
   
-				<div class="col-md-9 search form-group has-feedback">
+				<div class="col-md-9 search form-group has-feedback hiddeninMobile">
 					 <input type="text" class="form-control typeahead" placeholder="Search....">
 			<span class="glyphicon glyphicon-search form-control-feedback"></span>
 											  
@@ -154,7 +155,7 @@
 			<div style="background-color: white" align="center"	><div class="HPHeader2">
                                     <table>
                                         <tbody><tr>
-                                            <td class="sort_first">
+                                            <td class="sort_first hidden-xs">
                                                 Sort By :
                                             </td>
                                             <td class="sort_second">
