responsive issues for icons and other elements

--- a/index1.html
+++ b/index1.html
@@ -139,7 +139,7 @@
        
       <div class="container main-container"> 
         <div class="row">
-         <div class="col-md-3 categories hidden-xs col-sm-4" id="categories" href="#categories">
+         <div class="col-md-3 categories hidden-xs hidden-sm" id="categories" href="#categories">
             <div class="list-group">
               <span class="list-group-item heading">                
 				<span class="glyphicon glyphicon-th-list" title="Click to decrease"></span> Categories
@@ -147,7 +147,7 @@
             </div>  
          </div>
             
-          <div class="col-md-6 col-sm-8 itemList">
+          <div class="col-md-6 col-sm-12 itemList">
               <ul class="nav nav-tabs nav-justified">
                    <li class="lateNight"><a href="#">Menu Items</a>                     
 				   </li>
