Checkout pages updated with local storage values

--- a/check-out.html
+++ b/check-out.html
@@ -144,8 +144,8 @@
                           </h3>
                         </div>
                       <ul class="list-group">
-                          <li class="list-group-item"><strong id="displayHomeName">Suneel Manyam</strong></li>
-                          <li class="list-group-item" id="displayHomeAddress">Lig Plot no: 75, KPHb-2 Lane, Kukatpally, RR District, Hyderabad,Telangan - 500072, Ph: 9705984789</li>
+                          <li class="list-group-item"><strong id="displayHomeName"></strong></li>
+                          <li class="list-group-item" id="displayHomeAddress"></li>
                       </ul>
                 </div>
                  <div class="panel panel-primary editHomeAddress address">
@@ -158,25 +158,25 @@
                          <div class="form-group">
                             <label for="inputEmail3" class="col-sm-2 control-label">Name</label>
                             <div class="col-sm-10">
-                              <input type="text" class="form-control" id="homeName" Value="Suneel Manyam" placeholder="FirstName">
+                              <input type="text" class="form-control" id="homeName" placeholder="Your Name">
                             </div>
                           </div>
                           <div class="form-group">
                             <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
                             <div class="col-sm-10">
-                              <input type="email" class="form-control" value="sunilhai9@gmail.com" id="homeEmail" placeholder="please enter Email">
+                              <input type="email" class="form-control" id="homeEmail" placeholder="please enter Email">
                             </div>
                           </div>
                          <div class="form-group">
                             <label for="inputEmail3" class="col-sm-2 control-label">Phone</label>
                             <div class="col-sm-10">
-                              <input type="phone" class="form-control" id="homePhone" value="9705984789" placeholder="9705984789">
+                              <input type="phone" class="form-control" id="homePhone" placeholder="9705984789">
                             </div>
                           </div>
                          <div class="form-group">
                             <label for="inputEmail3" class="col-sm-2 control-label">Address</label>
                             <div class="col-sm-10">
-                                <textarea class="form-control" id="homeAddr" value="9705984789" placeholder="9705984789">Lig Plot no: 75, KPHb-2 Lane, Kukatpally, RR District, Hyderabad,Telangan - 500072</textarea>
+                                <textarea class="form-control" id="homeAddr" placeholder="9705984789"></textarea>
                             </div>
                           </div>
                          
@@ -199,8 +199,8 @@
                           </h3>
                         </div>
                       <ul class="list-group">
-                          <li class="list-group-item"><strong id="displayDelivaryName">Suneel Manyam</strong></li>
-                        <li class="list-group-item" id="displayDelivaryAddress">Lig Plot no: 75, KPHb-2 Lane, Kukatpally, RR District, Hyderabad,Telangan - 500072, Ph: 9705984789</li>
+                          <li class="list-group-item"><strong id="displayDelivaryName"></strong></li>
+                        <li class="list-group-item" id="displayDelivaryAddress"></li>
                       </ul>
                     <button id="activate-step-2" class="btn btn-primary pull-right">Process to cart Items</button>
                 </div>
@@ -215,25 +215,25 @@
                          <div class="form-group">
                             <label for="inputEmail3" class="col-sm-2 control-label">Name</label>
                             <div class="col-sm-10">
-                              <input type="text" class="form-control" id="deliveryName" Value="Suneel Manyam" placeholder="FirstName">
+                              <input type="text" class="form-control" id="deliveryName" placeholder="Your Name">
                             </div>
                           </div>
                           <div class="form-group">
                             <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
                             <div class="col-sm-10">
-                              <input type="email" class="form-control" value="sunilhai9@gmail.com" id="deliveryEmail" placeholder="please enter Email">
+                              <input type="email" class="form-control" id="deliveryEmail" placeholder="please enter Email">
                             </div>
                           </div>
                          <div class="form-group">
                             <label for="inputEmail3" class="col-sm-2 control-label">Phone</label>
                             <div class="col-sm-10">
-                              <input type="phone" class="form-control" id="deliveryPhone" value="9705984789" placeholder="9705984789">
+                              <input type="phone" class="form-control" id="deliveryPhone" placeholder="9705984789">
                             </div>
                           </div>
                          <div class="form-group">
                             <label for="inputEmail3" class="col-sm-2 control-label">Address</label>
                             <div class="col-sm-10">
-                                <textarea class="form-control" id="deliveryAddr" value="9705984789" placeholder="9705984789">Lig Plot no: 75, KPHb-2 Lane, Kukatpally, RR District, Hyderabad,Telangan - 500072</textarea>
+                                <textarea class="form-control" id="deliveryAddr"  placeholder="Enter delivery address"></textarea>
                             </div>
                           </div>
                          
@@ -274,9 +274,9 @@
 						<tr>
 							<th style="width:50%">Items</th>
 							<th style="width:10%">Price</th>
-							<th style="width:8%">Quantity</th>
-							<th style="width:22%" class="text-center">Subtotal</th>
-							<th style="width:10%"></th>
+							<th style="width:10%">Quantity</th>
+							<th style="width:25%" class="text-center">Subtotal</th>
+							<th style="width:5%"></th>
 						</tr>
 					</thead>
 					<tbody id="checkOutItemsList">
@@ -292,7 +292,6 @@
 				        </td>
 				        <td data-th="Subtotal" class="text-center">&#8377; 750</td>
 				        <td class="actions" data-th="">
-								<button class="btn btn-danger btn-sm"><i class="glyphicon glyphicon-trash"></i></button>												</td>
 				    </tr>
                     <tr>
 				        <td data-th="">
@@ -306,7 +305,6 @@
 				        </td>
 				        <td data-th="Subtotal" class="text-center">&#8377; 50</td>
 				        <td class="actions" data-th="">
-								<button class="btn btn-danger btn-sm"><i class="glyphicon glyphicon-trash"></i></button>												</td>
 				    </tr>
 					</tbody>
 					<tfoot>
