--- a/index1.html
+++ b/index1.html
@@ -34,11 +34,10 @@
             </button>
             <a class="navbar-brand" href="index.html"><img class="logo" alt="Brand" src="custom/images/logo.png"></a>
           </div>
-            <span class="glyphicon glyphicon-search searchInMobile hiddenInTab hidden-md hidden-lg"></span>
 		  <div class="col-md-6 text-center navbar-left">
   
 				<div class="col-md-9 search form-group has-feedback hiddeninMobile">
-					 <input type="text" class="form-control typeahead" placeholder="Search....">
+					 <input type="text" class="form-control typeahead" placeholder="Search Food....">
 			<span class="glyphicon glyphicon-search form-control-feedback"></span>
 											  
 				</div>
@@ -153,31 +152,8 @@
 				   </li>
             </ul>
 			<div style="background-color: white" align="center"	><div class="HPHeader2">
-                                    <table>
-                                        <tbody><tr>
-                                            <td class="sort_first hidden-xs">
-                                                Sort By :
-                                            </td>
-                                            <td class="sort_second">
-                                                <ul class="sort">
-                                                    <li>
-                                                        <a id="veg" href="#"><img src="./custom/images/Veg.png" alt="Veg" title="Veg">
-                                                            Veg&nbsp;
-                                                        </a></li>
-                                                    <li>
-                                                        <a id="nonveg" href="#"><img src="./custom/images/NonVeg.png" alt="Non Veg" title="Non Veg">&nbsp;Non-Veg
-                                                        </a></li>
-                                                    <li>
-                                                        <a id="unitPrice" class="asc" href="#">Price</a><img class="unitPriceImg" src="./custom/images/no_sort.png" />
-                                                    </li>
-													 <li>
-                                                        <a id="popularity" class="asc" href="#">Popularity</a><img class="popularityImg" src="./custom/images/no_sort.png" />
-                                                    </li>
-                                                </ul>
-                                            </td>
-                                        </tr>
-                                    </tbody></table>
-                                </div></div>
+				<table> <tbody><tr> <td class="sort_first hidden-xs"> Sort By : </td><td class="sort_second"> <ul class="sort"> <li> <a id="veg" href="#"><img src="./custom/images/Veg.png" alt="Veg" title="Veg"> Veg&nbsp; </a></li><li> <a id="nonveg" href="#"><img src="./custom/images/NonVeg.png" alt="Non Veg" title="Non Veg">&nbsp;Non-Veg </a></li><li> <a id="unitPrice" class="asc" href="#">Price</a><img class="unitPriceImg" src="./custom/images/no_sort.png"/> </li><li> <a id="popularity" class="asc" href="#">Popularity</a><img class="popularityImg" src="./custom/images/no_sort.png"/> </li></ul> </td></tr></tbody></table>
+             </div></div>
             <div class="items scroll">
 			
           </div>
@@ -189,13 +165,14 @@
 					<div id="cartItemDesc" class="scroll"></div>
                     <hr class="hrLine">
                     <div class="customize clearCart" title="Click to clear all cart items">Clear Cart</div>
-                    <div><div class="left">Sub Total</div><div class="right">300.00</div></div>
-                    <div><div class="left">Delivery Free</div><div class="right">0.00</div></div>
-                    <div><div class="left">Container Charges (+)</div><div class="right">50.40</div></div>
-					<div><div class="left">Rounded Off (+/-) </div><div class="right">0.40</div></div>
+                    <div><div class="left">Sub Total</div><div class="right subtotal">0.00</div></div>
+                    <div><div class="left">Delivery Free</div><div class="right delivery">0.00</div></div>
+                    <div><div class="left">Container Charges (+)</div><div class="right container_charges">50.40</div></div>
+					<div><div class="left">Service Tax(+)</div><div class="right service_tax">0.00</div></div>
+					<div><div class="left">Rounded Off (+/-) </div><div class="right rounded_off">0.40</div></div>
                     <div class="totalAmount row">
                         <span class="col-md-6">Total</span>
-                        <span class="col-md-6 text-right">Rs. 350</span>
+                        <span class="col-md-6 text-right grand_total">Rs. 350</span>
                     </div>
                     <hr class="hrLine">
                   <div id="checkout" class="col-md-8">Proceed to Checkout</div>
