--- a/index1.html
+++ b/index1.html
@@ -22,7 +22,8 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
   </head>
-  <body>
+  <body class="index_body">
+  <div class="se-pre-con"></div>
   <div class="messagesBar"></div>
      
   <div class="container-fluid ">
