--- a/index1.html
+++ b/index1.html
@@ -139,6 +139,7 @@
             </div>
         </div>
         <!--End customize food modal-->
+       <a id="left-menu" class="hidden-sm hidden-lg" href="#sidr"><span class="menuMobile">Categories</span></a>
 
         <div class="container main-container">
             <div class="row">
@@ -255,6 +256,16 @@
             </span>
         </div>
     </div>
+   
+<div id="sidr" class="hidden-sm hidden-md hidden-lg">
+  <div class="list-group categoriesListMenuOverlay">
+      <span class="list-group-item heading">                
+          <span class="glyphicon glyphicon-th-list" title="Click to decrease"></span> Categories
+      </span>
+  </div>
+</div>
+ 
+
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="vendor/js/jquery-1.11.3.min.js"></script>
     <script src="custom/js/SocialLogin.js"></script>
@@ -264,17 +275,12 @@
     <script src="vendor/js/bootstrap.min.js"></script>
     <script src="vendor/js/bootstrap-dialog.min.js"></script>
     <script src="vendor/js/jquery.sidr.min.js"></script>
-
-    <!--<div id="sidr" class="hidden-sm hidden-md hidden-lg">
-  <div class="list-group categoriesListMenuOverlay">
-      <span class="list-group-item heading">                
-          <span class="glyphicon glyphicon-th-list" title="Click to decrease"></span> Categories
-      </span>
-  </div>
-</div>-->
-
-    <script>
-    </script>
+    <script src="vendor/js/jquery.touchwipe.js"></script>
+<script>
+$(document).ready(function() {
+  $('#left-menu').sidr();
+});
+</script>
 
 </body>
 
