--- a/index1.html
+++ b/index1.html
@@ -251,7 +251,7 @@
             </span>
         </div>
     </div>
-
+<input type="hidden" id="activeCat" />
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="vendor/js/jquery-1.11.3.min.js"></script>
