draft checkout logic for subtotal

--- a/check-out.html
+++ b/check-out.html
@@ -363,7 +363,7 @@
     <script src="https://apis.google.com/js/client.js?onload=handleClientLoad"></script>
     <script src="vendor/js/bootstrap.min.js"></script>
     <script src="vendor/js/bootstrap-dialog.min.js"></script>
-    <script src="custom/js/checkout.js"></script>
+    <script src="custom/js/script1.js"></script>
     <style>
         .address {
             border: 0px !important;
