--- a/check-out.html
+++ b/check-out.html
@@ -10,8 +10,8 @@
 
     <!-- Bootstrap -->
     <link href="vendor/css/bootstrap.min.css" rel="stylesheet">
-    <link href="custom/css/style.css" rel="stylesheet">
     <link href="vendor/css/bootstrap-dialog.min.css" rel="stylesheet">
+    <link href="custom/css/style.css" rel="stylesheet">
 
     <link rel="icon" type="image/png" href="custom/images/favicon.png">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -123,13 +123,13 @@
                                 <p class="list-group-item-text">To Deliver the items</p>
                             </a>
                         </li>
-                        <li class="">
+                        <li class="disabled">
                             <a href="#step-2">
                                 <h4 class="list-group-item-heading">Cart Items</h4>
                                 <p class="list-group-item-text">Update Here if you want</p>
                             </a>
                         </li>
-                        <li class="">
+                        <li class="disabled">
                             <a href="#step-3">
                                 <h4 class="list-group-item-heading">Payment</h4>
                                 <p class="list-group-item-text">Secure Payment with CC Avenu</p>
@@ -146,7 +146,7 @@
                                 <!-- Default panel contents -->
                                 <div class="panel-heading ">
                                     <h3>
-                          <input type="radio" name="optionsRadios" id="homeAddress" value="option1">
+                          <input type="radio" name="addressSelection" id="homeAddress" value="option1">
                           Home Address 
                           <div class="pull-right editHomeAddressIcon"><span class="glyphicon glyphicon-pencil"></span></div>
                           </h3>
@@ -201,7 +201,7 @@
                             <div class="panel panel-primary defaultDelivaryAddress">
                                 <div class="panel-heading ">
                                     <h3>
-                          <input type="radio" name="optionsRadios" id="delivaryAddress" value="option2">
+                          <input type="radio" name="addressSelection" id="delivaryAddress" value="option2">
                           Delivary Address
                         <div class="pull-right editDelivaryAddressIcon"><span class="glyphicon glyphicon-pencil"></span></div>
                           </h3>
@@ -210,7 +210,7 @@
                                     <li class="list-group-item"><strong id="displayDelivaryName"></strong></li>
                                     <li class="list-group-item" id="displayDelivaryAddress"></li>
                                 </ul>
-                                <button id="activate-step-2" class="btn btn-primary pull-right">Process to cart Items</button>
+                                <button id="activate-cartItems" class="btn btn-primary pull-right">Process to cart Items</button>
                             </div>
                             <div class="panel panel-primary editDelivaryAddress address">
                                 <div class="panel-heading ">
@@ -257,22 +257,7 @@
                 </div>
             </div>
             <div>
-                <!--<tr id="chechOutItemsTemplate">
-				        <td data-th="">
-							<div class="row">
-								<div class="col-sm-2 hidden-xs"><img src="http://placehold.it/100x100" alt="..." class="img-responsive"/></div>
-									<div class="col-sm-6"><h4 class="nomargin productName"></h4></div>
-				                </div>
-				        </td>
-				        <td data-th="Price" class="price">&#8377; </td>
-				        <td data-th="Quantity">
-                            <input type="number" class="form-control text-center quantity" value="3">
-				        </td>
-				        <td data-th="Subtotal" class="text-center" class="subtotal">&#8377; </td>
-				        <td class="actions" data-th="">
-								<button class="btn btn-danger btn-sm"><i class="glyphicon glyphicon-trash deleteItem"></i></button>												</td>
-            </tr>-->
-
+        
             </div>
             <div class="row setup-content" id="step-2">
                 <div class="col-xs-12">
@@ -325,7 +310,7 @@
                                     <td><a href="index.html" class="btn btn-warning"><i class="fa fa-angle-left"></i> Continue Shopping</a></td>
                                     <td colspan="2" class="hidden-xs"></td>
                                     <td class="hidden-xs text-center"><strong>Total &#8377; 800</strong></td>
-                                    <td><a href="#" class="btn btn-primary btn-block">Proceed Payment<i class="fa fa-angle-right"></i></a></td>
+                                    <td><a href="#" id="activate-payment" class="btn btn-primary btn-block">Proceed Payment<i class="fa fa-angle-right"></i></a></td>
                                 </tr>
                             </tfoot>
                         </table>
