--- a/check-out.html
+++ b/check-out.html
@@ -11,7 +11,7 @@
     <!-- Bootstrap -->
     <link href="vendor/css/bootstrap.min.css" rel="stylesheet">
     <link href="vendor/css/bootstrap-dialog.min.css" rel="stylesheet">
-    <link href="custom/css/style.css" rel="stylesheet">
+    <link href="custom/css/style1.css" rel="stylesheet">
 
     <link rel="icon" type="image/png" href="custom/images/favicon.png">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -23,6 +23,8 @@
 </head>
 
 <body>
+  <div class="se-pre-con"></div>
+
     <div class="container-fluid ">
         <nav class="navbar navbar-default navbar-fixed-top">
             <div class="container">
@@ -120,19 +122,19 @@
                         <li class="active">
                             <a href="#step-1">
                                 <h4 class="list-group-item-heading">Address</h4>
-                                <p class="list-group-item-text">To Deliver the items</p>
+                                <p class="list-group-item-text">To deliver the yummy food</p>
                             </a>
                         </li>
                         <li class="disabled">
                             <a href="#step-2">
                                 <h4 class="list-group-item-heading">Cart Items</h4>
-                                <p class="list-group-item-text">Update Here if you want</p>
+                                <p class="list-group-item-text">Take a Glance of your food</p>
                             </a>
                         </li>
                         <li class="disabled">
                             <a href="#step-3">
                                 <h4 class="list-group-item-heading">Payment</h4>
-                                <p class="list-group-item-text">Secure Payment with CC Avenu</p>
+                                <p class="list-group-item-text">Secure Payment with ICICI Gateway</p>
                             </a>
                         </li>
                     </ul>
@@ -202,7 +204,7 @@
                                 <div class="panel-heading ">
                                     <h3>
                           <input type="radio" name="addressSelection" id="delivaryAddress" value="option2">
-                          Delivary Address
+                          Delivery Address
                         <div class="pull-right editDelivaryAddressIcon"><span class="glyphicon glyphicon-pencil"></span></div>
                           </h3>
                                 </div>
@@ -215,7 +217,7 @@
                             <div class="panel panel-primary editDelivaryAddress address">
                                 <div class="panel-heading ">
                                     <h3>
-                          Update Delivary Address
+                          Update Delivery Address
                           </h3>
                                 </div>
 
@@ -262,54 +264,26 @@
             <div class="row setup-content" id="step-2">
                 <div class="col-xs-12">
                     <div class="col-md-12 well stummyBrandingBottom">
-                        <table id="cart" class="table table-hover table-condensed">
+                        <table id="cartCheckout" class="table table-hover table-condensed">
                             <thead>
                                 <tr>
-                                    <th style="width:50%">Items</th>
+                                    <th style="width:55%">Items</th>
                                     <th style="width:10%">Price</th>
-                                    <th style="width:10%">Quantity</th>
+                                    <th style="width:10%;text-align:center;">Quantity</th>
                                     <th style="width:25%" class="text-center">Subtotal</th>
-                                    <th style="width:5%"></th>
                                 </tr>
                             </thead>
                             <tbody id="checkOutItemsList">
-                                <tr>
-                                    <td data-th="">
-                                        <div class="row">
-                                            <div class="col-sm-2 hidden-xs"><img src="http://placehold.it/100x100" alt="..." class="img-responsive" /></div>
-                                            <div class="col-sm-6">
-                                                <h4 class="nomargin">Chicken Fry</h4></div>
-                                        </div>
-                                    </td>
-                                    <td data-th="Price">&#8377; 250</td>
-                                    <td data-th="Quantity">3
-                                    </td>
-                                    <td data-th="Subtotal" class="text-center">&#8377; 750</td>
-                                    <td class="actions" data-th="">
-                                </tr>
-                                <tr>
-                                    <td data-th="">
-                                        <div class="row">
-                                            <div class="col-sm-2 hidden-xs"><img src="http://placehold.it/100x100" alt="..." class="img-responsive" /></div>
-                                            <div class="col-sm-6">
-                                                <h4 class="nomargin">Tomoto soop</h4></div>
-                                        </div>
-                                    </td>
-                                    <td data-th="Price">&#8377; 25</td>
-                                    <td data-th="Quantity">2
-                                    </td>
-                                    <td data-th="Subtotal" class="text-center">&#8377; 50</td>
-                                    <td class="actions" data-th="">
-                                </tr>
+                                
                             </tbody>
                             <tfoot>
                                 <tr class="visible-xs">
-                                    <td class="text-center"><strong>Total &#8377; 800</strong></td>
+                                    <td class="text-right checkoutTotalAmount"></td>
                                 </tr>
                                 <tr>
                                     <td><a href="index.html" class="btn btn-warning"><i class="fa fa-angle-left"></i> Continue Shopping</a></td>
                                     <td colspan="2" class="hidden-xs"></td>
-                                    <td class="hidden-xs text-center"><strong>Total &#8377; 800</strong></td>
+                                    <td class="hidden-xs text-right checkoutTotalAmount"></td>
                                     <td><a href="#" id="activate-payment" class="btn btn-primary btn-block">Proceed Payment<i class="fa fa-angle-right"></i></a></td>
                                 </tr>
                             </tfoot>
@@ -342,7 +316,21 @@
             </div>
         </nav>
     </div>
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+	<div class="itemRowCheckout hidden">
+		<table><tr>
+			<td data-th="">
+				<div class="row">
+					<div class="col-sm-2 hidden-xs"><img src="./custom/images/food/C.jpg" alt="..." class="itemRowImage img-responsive" /></div>
+					<div class="col-sm-6">
+						<h4 class="nomargin itemRowPname"></h4></div>
+				</div>
+			</td>
+			<td data-th="Price" class="itemRowPrice"></td>
+			<td data-th="Quantity" class="itemRowQuantity"></td>
+			<td data-th="Subtotal" class="text-right itemRowTotal"></td>
+		</tr></table>
+	</div>
+		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="vendor/js/jquery-1.11.3.min.js"></script>
     <script src="custom/js/SocialLogin.js"></script>
     <script src="https://apis.google.com/js/client.js?onload=handleClientLoad"></script>
