--- a/index1.html
+++ b/index1.html
@@ -252,7 +252,12 @@
         </div>
     </div>
 <input type="hidden" id="activeCat" />
+    
+<nav class="navbar navbar-inverse navbar-bottom">
+            <div class="container">
 
+            </div>
+</nav>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="vendor/js/jquery-1.11.3.min.js"></script>
     <script src="custom/js/SocialLogin.js"></script>
