initial commit for OTP
some part of ui is done need to work on ligic

--- a/check-out.html
+++ b/check-out.html
@@ -330,12 +330,12 @@
                 </div>
             </div>
         </div>
-        <nav class="navbar navbar-inverse navbar-fixed-bottom hidden-xs">
+    </div>
+        <nav class="navbar navbar-inverse navbar-fixed-bottom">
             <div class="container">
 
             </div>
         </nav>
-    </div>
     <div class="itemRowCheckout hidden">
         <table>
             <tr>
