profile info in local storage and offer model window

--- a/check-out.html
+++ b/check-out.html
@@ -213,7 +213,7 @@
                             <div class="panel panel-primary defaultDelivaryAddress">
                                 <div class="panel-heading ">
                                     <h3>
-                          <input type="radio" name="addressSelection" id="delivaryAddress" value="option2">
+                          <input type="radio" name="addressSelection" id="delivaryAddress" checked value="option2">
                           Delivery Address
                         <div class="pull-right editDelivaryAddressIcon"><span class="glyphicon glyphicon-pencil"></span></div>
                           </h3>
@@ -314,17 +314,25 @@
             </div>
             <div class="row setup-content" id="step-3">
                 <div class="col-xs-12 ">
-                    <div class="col-md-12 well  stummyBrandingBottom">
+                    <div class="col-md-4 well  stummyBrandingBottom">
 
                         <div class="panel panel-primary">
                             <!-- Default panel contents -->
                             <div class="panel-heading">Payment Mode</div>
 
-                            <ul class="list-group">
-                                <li class="list-group-item">Internet Banking</li>
-                                <li class="list-group-item">Cash on delivary</li>
-                                <li class="list-group-item">Swipe on delivary</li>
+                            <ul class="nav nav-pills nav-stacked">
+                                <li class="active"><a href="#">Internet Banking</a></li>
+                                <li ><a href="#">Cash on delivary</a></li>
+                                <li ><a href="#">Swipe on delivary</a></li>
+
                             </ul>
+                        </div>
+                    </div>
+                    <div class="col-md-8 well  stummyBrandingBottom">
+                        <div class="panel panel-primary">
+                            <!-- Default panel contents -->
+                            <div class="panel-heading">Terms & conditions </div>
+                            <div>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</div>
                         </div>
                     </div>
                 </div>
