--- a/index1.html
+++ b/index1.html
@@ -346,10 +346,12 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
 
             </div>
 </nav>
+<input type="hidden" id="statusFlag" />
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="vendor/js/jquery-1.11.3.min.js"></script>
-    <script src="custom/js/SocialLogin.js"></script>
-    <script src="https://apis.google.com/js/client.js?onload=handleClientLoad"></script>
+    <!--<script src="custom/js/SocialLogin.js"></script>
+    <script src="https://apis.google.com/js/client.js?onload=handleClientLoad"></script>-->
+	<script src="custom/js/md5.js"></script>
     <script src="vendor/js/bootstrap.min.js"></script>
     <script src="vendor/js/bootstrap-dialog.min.js"></script>
     <script src="vendor/js/jquery.sidr.min.js"></script>
